--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,20 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk  # Utilisation d'une image Docker avec Java 8
-    working_directory: ~/fr.univavignon.pokedex.api  # Remplacez par le répertoire de votre projet
-    branches:
-      only:
-        - master
+      - image: circleci/openjdk:8-jdk
+    working_directory: ~/fr.univavignon.pokedex.api
     steps:
-      - checkout  # Récupère le code source
+      - checkout
       - run:
           name: Run Unit Tests with Maven
-          command: mvn test  # Exécutez les tests unitaires avec Maven
+          command: mvn test
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - master
