--- a/pom.xml
+++ b/pom.xml
@@ -15,31 +15,22 @@
 
     <!-- Dépendances -->
     <dependencies>
-
-
         <!-- Dépendance Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.8.9</version>
+            <version>2.8.9</version> <!-- Mettez à jour la version de Mockito -->
             <scope>test</scope>
         </dependency>
         <!-- Dépendance JUnit -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>3.8.1</version>
-                <scope>test</scope>
-            </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.1</version> <!-- Mettez à jour la version de JUnit -->
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
+
     <!-- Définition des cycles de vie -->
     <build>
         <plugins>
@@ -56,13 +47,34 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M5</version> <!-- Mettez à jour la version de Surefire -->
                 <configuration>
                     <testSourceDirectory>src/test/java</testSourceDirectory>
                 </configuration>
+            </plugin>
+
+            <!-- Configuration du plugin JaCoCo pour la couverture de code -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
 
 </project>
-
