--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,37 @@
 version: 2.1
+
+
+orbs:
+  maven: circleci/maven@1.4.1
+  codecov: codecov/codecov@4.0.1
+
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:11.0.4-jdk
+      - image: circleci/openjdk:17-ea-buster-node-browsers-legacy
+
     steps:
       - checkout
-      - run: mvn clean verify
+
+
       - run:
-          name: Upload coverage to Codecov
+          name: Run Unit Tests
+          command: mvn test -X
+      - run:
+          name: Generate Coverage Report
+          command: mvn jacoco:report
+      - run:
+          name: Upload Coverage Report
           command: bash <(curl -s https://codecov.io/bash)
+
 workflows:
   version: 2
-  build:
+  upload-to-codecov:
     jobs:
       - build
+  maven_test:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
