--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-
-
-
 jobs:
   build:
     docker:
@@ -10,7 +7,6 @@ jobs:
 
     steps:
       - checkout
-
 
       - run:
           name: Run Unit Tests
@@ -21,6 +17,10 @@ jobs:
       - run:
           name: Upload Coverage Report
           command: bash <(curl -s https://codecov.io/bash)
+      - run:
+          name: Run Checkstyle
+          command: mvn checkstyle:checkstyle
+
 
 workflows:
   version: 2
